Changelog
=========

1.0a2 (unreleased)
------------------

- Now handles the separation between pending and disapproved statuses.


1.0a1 (2012-05-31)
------------------

- Initial release